--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.cloud.stream.bindings.input.destination=source
-spring.cloud.stream.bindings.input.group=demo
-spring.cloud.stream.bindings.output.destination=sink
+spring.cloud.stream.bindings.input.destination=demo-in
+spring.cloud.stream.bindings.input.group=hello
+spring.cloud.stream.bindings.output.destination=demo-out
 spring.cloud.stream.function.definition=hello
